CMake - Let ntirpc find it's modules
When building ntirpc as a sub-module, it needs to be able find it's
CMake modules.  However, the way it sets it's path means it was looking
in Ganesha's module directory.

When including ntirpc, explicitly add it's module directory to the path.

Change-Id: I4f957d01b564e3c54e2981855b2c11d8997f4a0b
Signed-off-by: Daniel Gryniewicz <dang@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1014,6 +1014,8 @@ else (USE_SYSTEM_NTIRPC)
   set(USE_RPC_RDMA ${USE_NFS_RDMA} CACHE BOOL "Use RDMA")
   set(TIRPC_EPOLL ${TIRPC_EPOLL} CACHE BOOL "Use EPOLL")
   set(USE_GSS ${USE_GSS} CACHE BOOL "Use GSS")
+  set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
+	  "${CMAKE_SOURCE_DIR}/libntirpc/cmake/modules/")
   add_subdirectory(libntirpc)
   set(NTIRPC_LIBRARY ntirpc)
   set(NTIRPC_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/libntirpc/ntirpc/")
