--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -303,3 +303,22 @@ target_link_libraries(test_read2_latency
   )
 set_target_properties(test_read2_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_open2_latency_SRCS
+  test_open2_latency.cc
+  )
+
+add_executable(test_open2_latency
+  ${test_open2_latency_SRCS})
+add_sanitizers(test_open2_latency)
+
+target_link_libraries(test_open2_latency
+  ${GANESHA_LIBRARIES}
+  ${UNITTEST_LIBS}
+  ${LTTNG_LIBRARIES}
+  ${LTTNG_CTL_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
+  )
+set_target_properties(test_open2_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
