gtest/test_close2_latency: close2 latency microbenchmark
gtest unit test that run close2 on single case, large loops
and bypass cases to find average latency of the calls.

Change-Id: I54bf7f8f05c495167f940e7af27caee282b5d69a
Signed-off-by: Girjesh Rajoria <grajoria@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -322,3 +322,22 @@ target_link_libraries(test_open2_latency
   )
 set_target_properties(test_open2_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_close2_latency_SRCS
+  test_close2_latency.cc
+  )
+
+add_executable(test_close2_latency
+  ${test_close2_latency_SRCS})
+add_sanitizers(test_close2_latency)
+
+target_link_libraries(test_close2_latency
+  ${GANESHA_LIBRARIES}
+  ${UNITTEST_LIBS}
+  ${LTTNG_LIBRARIES}
+  ${LTTNG_CTL_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
+  )
+set_target_properties(test_close2_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
