Try adding redhat e-mail for notifications
Signed-off-by: Frank S. Filz <ffilzlnx@mindspring.com>

--- a/project.config
+++ b/project.config
@@ -34,6 +34,9 @@
 [notify "temp"]
 	email = devel@lists.nfs-ganesha.org
 	type = all
+[notify "redhat"]
+	email = ffilz@redhat.com
+	type = all
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
