--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -360,3 +360,22 @@ target_link_libraries(test_reopen2_latency
   )
 set_target_properties(test_reopen2_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_setattr2_latency_SRCS
+  test_setattr2_latency.cc
+  )
+
+add_executable(test_setattr2_latency
+  ${test_setattr2_latency_SRCS})
+add_sanitizers(test_setattr2_latency)
+
+target_link_libraries(test_setattr2_latency
+  ${GANESHA_LIBRARIES}
+  ${UNITTEST_LIBS}
+  ${LTTNG_LIBRARIES}
+  ${LTTNG_CTL_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
+  )
+set_target_properties(test_setattr2_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
