gtest/test_readdir_latency: readdir latency microbenchmark
gtest unit test that run readdir on single case, large loops
and bypass cases to find average latency of the calls.

Change-Id: I9465edb0aaf084ab4469e045a53245bf32ba6523
Signed-off-by: Girjesh Rajoria <grajoria@redhat.com>

--- a/src/gtest/CMakeLists.txt
+++ b/src/gtest/CMakeLists.txt
@@ -379,3 +379,22 @@ target_link_libraries(test_setattr2_latency
   )
 set_target_properties(test_setattr2_latency PROPERTIES COMPILE_FLAGS
   "${UNITTEST_CXX_FLAGS}")
+
+
+set(test_readdir_latency_SRCS
+  test_readdir_latency.cc
+  )
+
+add_executable(test_readdir_latency
+  ${test_readdir_latency_SRCS})
+add_sanitizers(test_readdir_latency)
+
+target_link_libraries(test_readdir_latency
+  ${GANESHA_LIBRARIES}
+  ${UNITTEST_LIBS}
+  ${LTTNG_LIBRARIES}
+  ${LTTNG_CTL_LIBRARIES}
+  ${GPERFTOOLS_LIBRARIES}
+  )
+set_target_properties(test_readdir_latency PROPERTIES COMPILE_FLAGS
+  "${UNITTEST_CXX_FLAGS}")
